objects/Contract.object
<CustomObject>
    <fields>
        <fullName>RMB_Contract_Id__c</fullName>
        <inlineHelpText>updated by the system when the contract has been successfully transmitted to RMB</inlineHelpText>
        <label>RMB Contract Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RTB_Training_Expenses__c</fullName>
        <inlineHelpText>this field will have a total when the training coordinators have added a line item for travel expenses that have been added and updated to ready to bill</inlineHelpText>
        <label>Travel Expenses Ready to Bill</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Change_Type__c</field>
            <operation>equals</operation>
            <value>Bill Travel Expenses</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Ready_to_Bill__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Bill_Now__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ADD</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ready_to_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by the user when the contract and billing items are ready to bill to RMB</inlineHelpText>
        <label>Ready to Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_status__c</fullName>
        <formula>IF(   ISPICKVAL( Status, &quot;Draft&quot;) , IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VRsB&amp;oid=00D700000008zHZ&amp;lastMod=1372104993000&quot;, &quot;Not Submitted&quot;),

IF(   ISPICKVAL( Status, &quot;Pending Cancellation&quot;) , IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021aG9&amp;oid=00D700000008zHZ&amp;lastMod=1426013098000&quot;, &quot;Pending Cancellation&quot;),

IF( ISPICKVAL( Status, &quot;Cancelled&quot;)  , IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VRs9&amp;oid=00D700000008zHZ&amp;lastMod=1369936024000&quot;, &quot;Cancelled&quot;),

IF(ISPICKVAL(Status, &quot;Activated&quot;), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VRs7&amp;oid=00D700000008zHZ&amp;lastMod=1372103479000&quot;, &quot;Active Contract&quot;),
IF( ISPICKVAL( Status, &quot;NON RMB&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021SOK&amp;oid=00D700000008zHZ&amp;lastMod=1418502767000&quot;, &quot;NOT BILLED THROUGH RMB&quot;,40,350), 

NULL)))))</formula>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the appeal related to this cancellation</inlineHelpText>
        <label>Related Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity_ID__c</fullName>
        <description>TEMP field can be deleted - PJD 2-25-15</description>
        <formula>Related_Opportunity__r.Id</formula>
        <label>Related Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVOC_Request_Age__c</fullName>
        <formula>IF(!ISBLANK( SVOC_Request__c ),Today()- DATEVALUE( SVOC_Request__r.CreatedDate ), NULL)</formula>
        <inlineHelpText>formula field that calculates the # of days from current date and the date the svoc request was submitted</inlineHelpText>
        <label>SVOC Request Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVOC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup related svoc request</inlineHelpText>
        <label>SVOC Request</label>
        <referenceTo>SVOC_Request__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVOC_Status__c</fullName>
        <formula>IF( Bill_To_SVOC_ID__c = Null,  IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001Vaqi&amp;oid=00D700000008zHZ&amp;lastMod=1372704924000&quot;, &quot;Missing SVOC Id&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVOC_Submitted_Date__c</fullName>
        <formula>SVOC_Request__r.CreatedDate</formula>
        <inlineHelpText>formula field that reads the Date/Time the SVOC request was submitted</inlineHelpText>
        <label>SVOC Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Related_Opportunity__r.Opp_Owner__c</formula>
        <inlineHelpText>formula field that reads the opp owner from the first opp that created a contract</inlineHelpText>
        <label>Initial Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SaveEditTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SaveEditTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingAddress2__c</fullName>
        <formula>Account.ShippingStreet + &apos; &apos; + Account.ShippingCity + &apos;, &apos; + Account.ShippingState + &apos; &apos; + Account.ShippingPostalCode + &apos; &apos; + Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShippingAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contract_Id__c</fullName>
        <inlineHelpText>if the contract type = Legacy, use the Legacy source contract id as the source contract id, otherwise use the Contract Number field</inlineHelpText>
        <label>Source Contract Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TEMP_DELETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEMP DELETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Line_Items_Implementation__c</fullName>
        <inlineHelpText>formula field that counts the number of line items pending implementation</inlineHelpText>
        <label>Total Line Items (Implementation)</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Recurring_Flag__c</field>
            <operation>equals</operation>
            <value>BP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MODIFY</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_MRR__c</fullName>
        <inlineHelpText>formula field that sums the total recurring revenue for product</inlineHelpText>
        <label>Total MRR</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Product_Family_Workflow__c</field>
            <operation>equals</operation>
            <value>Monthly Reoccuring</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Prepaid_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Alternate_Product_Description__c</field>
            <operation>notContain</operation>
            <value>advance payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MODIFY, ADD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Included__c</fullName>
        <inlineHelpText>updated when the Contract is created</inlineHelpText>
        <label>Training Included</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vin_Bill_To_Dealer_Id__c</fullName>
        <formula>Bill_To_Account__r.AccountNumber</formula>
        <label>Vin Bill To Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Dealer_Id1__c</fullName>
        <formula>Account.AccountNumber</formula>
        <inlineHelpText>formula field that reads the Dealer Id associated with the Dealer Account</inlineHelpText>
        <label>Vin Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Dealer_Id__c</fullName>
        <label>Vin Dealer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Status_Alert__c</fullName>
        <formula>IF( ISPICKVAL( Status , &quot;Activated&quot;) &amp;&amp; !ISPICKVAL(Account.Status__c, &quot;Customer&quot;) &amp;&amp;  Business_Unit__c = &quot;VinSolutions&quot;, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000022SC3&amp;oid=00D700000008zHZ&amp;lastMod=1443709239000&quot;, &quot;Update Vin Status&quot;), NULL)</formula>
        <label>Vin Status Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vinmanager_user_id__c</fullName>
        <inlineHelpText>the vinmanager user id associated with the customer placing the order</inlineHelpText>
        <label>VinManager User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <formula>IF( 
AND( 
ROUND(Opportunity_Amount__c,2) != Contract_Total__c, 
   RMB_Contract_Id__c  = Null, Business_Unit__c =&quot;VinSolutions&quot;
), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VRsD&amp;oid=00D700000008zHZ&amp;lastMod=1369936024000&quot;, &quot;&quot;), 
NULL 
)</formula>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Contract_Duration__c</fullName>
        <description>Wave specific formula field to capture the duration of contract.</description>
        <formula>EndDate - StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wave specific formula field to capture the duration of contract.</inlineHelpText>
        <label>Wave Contract Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XML_Message__c</fullName>
        <label>XML Message</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>l__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>l</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>obsolete_GT__c</fullName>
        <description>vAuto legacy billing system &quot;Greentree&quot; id #</description>
        <externalId>true</externalId>
        <inlineHelpText>vAuto legacy billing system &quot;Greentree&quot; id #</inlineHelpText>
        <label>obsolete vAuto GT#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>obsolete_vAuto_Greentree_Contract__c</fullName>
        <description>data moved to the account and a new formula field has been created to read from the account</description>
        <externalId>true</externalId>
        <label>obsolete vAuto Greentree Contract #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vAuto_Bill_To_Dealer_Id__c</fullName>
        <formula>Bill_To_Account__r.LogicalId__c</formula>
        <inlineHelpText>formula field that reads the vauto dealer id associated with the bill to account</inlineHelpText>
        <label>vAuto Bill To Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Contract_Status__c</fullName>
        <description>to hold legacy data</description>
        <label>vAuto Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Greentree__c</fullName>
        <formula>Account.vAuto_Greentree__c</formula>
        <inlineHelpText>formula field that reads the field from the account</inlineHelpText>
        <label>vAuto Greentree #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Spend__c</fullName>
        <formula>Account.vAuto_Spend2__c</formula>
        <inlineHelpText>formula field that reads the vAuto spend from the account - used for reporting</inlineHelpText>
        <label>vAuto Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vAuto_Subscriber_Dealer_Id__c</fullName>
        <formula>Account.vAuto_Account_Number__c</formula>
        <inlineHelpText>formula field that reads the vAuto dealer id from the subscriber account</inlineHelpText>
        <label>vAuto Subscriber Dealer Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>RMB_Contract_Id__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Last_Modified_Date_Time__c</columns>
        <columns>Last_Integration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/9/2013 12:00 AM</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContractsToday</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>RTB_Training_Expenses__c</columns>
        <columns>Parent_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <filters>
            <field>Date_Activated_in_RMB__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Activated Contracts - Today</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts_not_converted</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>Date_Activated_in_RMB__c</columns>
        <columns>RMB_Contract_Id__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>Contract_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/9/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>notEqual</operation>
            <value>Legacy Contract</value>
        </filters>
        <label>All Activated Contracts-Not Converted</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>Contract_Total__c</columns>
        <columns>Vin_Dealer_Id1__c</columns>
        <columns>Vin_Bill_To_Dealer_Id__c</columns>
        <columns>CONTRACT.ACTIVATED_BY</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Opportunity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>greaterThan</operation>
        </filters>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>lessOrEqual</operation>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>notEqual</operation>
            <value>vAuto</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Working,Draft</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Cancel</value>
        </filters>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Activated_Contracts</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>RMB_Contract_Id__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Last_Modified_Date_Time__c</columns>
        <columns>Last_Integration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/9/2013 12:00 AM</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contracts_with_Errors</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>Integration_Message__c</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>Contract_Total__c</columns>
        <columns>Accounting_Notes__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Related_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <label>!Vin Order Errors</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Greentree</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>obsolete_vAuto_Greentree_Contract__c</columns>
        <columns>obsolete_GT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>obsolete_GT__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>obsolete_vAuto_Greentree_Contract__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Greentree #</label>
        <language>en_US</language>
        <sharedTo>
            <group>vAuto_All_vAuto</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Haystak_Contract_with_No_Sign_Date</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>Contract_Type__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Related_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.NAME</field>
            <operation>contains</operation>
            <value>HAY</value>
        </filters>
        <filters>
            <field>COMPANY_SIGNED_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTRACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/30/2015 12:00 AM</value>
        </filters>
        <label>Haystak Contract with No Sign Date</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legacy_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Legacy Contract</value>
        </filters>
        <label>Legacy Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContractsToday</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>Source_Contract_Id__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>Bill_To_SVOC_ID__c</columns>
        <columns>Contract_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Last_Integration_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <label>My Vin Activated Contracts - Today</label>
        <sharedTo>
            <role>vAuto_Accounting</role>
            <role>vAuto_CAN_PM</role>
            <role>vAuto_CAN_System_Administrator</role>
            <role>vAuto_CTO_Co_Founder</role>
            <role>vAuto_Director_Finance</role>
            <role>vAuto_Director_Marketing</role>
            <role>vAuto_Director_Performance_Management</role>
            <role>vAuto_Director_Sales_CENTRAL</role>
            <role>vAuto_Director_Sales_WEST</role>
            <role>vAuto_Director_Training_Support</role>
            <role>vAuto_Manager_Integration</role>
            <role>vAuto_Manager_Performance_Management</role>
            <role>vAuto_Manager_Training</role>
            <role>vAuto_Marketing_Intern</role>
            <role>vAuto_Performance_Manager</role>
            <role>vAuto_Performance_Manager_US_CAN</role>
            <role>vAuto_Product_Specialist_CENTRAL</role>
            <role>vAuto_Product_Specialist_WEST</role>
            <role>vAuto_RMB_Team_Member</role>
            <role>vAuto_Salesforce_Coordinator</role>
            <role>vAuto_Sr_Director_Business_Development</role>
            <role>vAuto_Sr_Manager_Support_Integration</role>
            <role>vAuto_Sr_PM_Ops_Manager</role>
            <role>vAuto_Technical_Support</role>
            <role>vAuto_Training_Coordinator</role>
            <role>vAuto_Training_Rep</role>
            <role>vAuto_VP_GM</role>
            <role>vAuto_VP_Performance_Management</role>
            <role>vAuto_VP_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Pending_Payment_Match</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <filters>
            <field>Date_Payment_Matched__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <label>!Vin Pending Payment Match</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Review_All</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Integration_Status__c</columns>
        <columns>Vin_Dealer_Id1__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Accounting_Notes__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Draft,Pending SVOC Id,Pending Mail Print Quantity</value>
        </filters>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>greaterThan</operation>
            <value>6/3/2013</value>
        </filters>
        <filters>
            <field>Ready_to_Bill__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTRACT.NAME</field>
            <operation>notContain</operation>
            <value>test dealer</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Contract.Cancel,Contract.Cancel_Contract,Contract.Haystak_DM,Contract.vAuto_NOT_RMB</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>,Paul</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>,Duryee</value>
        </filters>
        <label>!Pending Review - All Vin</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Review_autoprocess</fullName>
        <columns>Ready_to_Bill__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Integration_Status__c</columns>
        <columns>Vin_Dealer_Id1__c</columns>
        <columns>Dealer_SVOC_ID__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Accounting_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Draft,Pending SVOC Id,Pending Mail Print Quantity</value>
        </filters>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>greaterThan</operation>
            <value>6/3/2013</value>
        </filters>
        <filters>
            <field>SALES.ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>test dealer</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>AutoProcess</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <label>!Pending Review - Vin Autoprocess</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ADD</fullName>
        <active>true</active>
        <description>use to add a new contract (order) to the AutoTrader Billing System</description>
        <label>ADD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_VinManager</fullName>
        <active>true</active>
        <description>for orders added from VinManager</description>
        <label>Add VinManager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancel</fullName>
        <active>true</active>
        <description>read only field page layout after contract end date and reason is entered</description>
        <label>CANCELLED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancel_Contract</fullName>
        <active>true</active>
        <description>use to initiate the full cancellation of a contract</description>
        <label>Cancel Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Haystak_DM</fullName>
        <active>true</active>
        <label>Haystak DM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modify</fullName>
        <active>true</active>
        <description>used when adding or changing product to an existing contract</description>
        <label>MODIFY</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_NOT_RMB</fullName>
        <active>true</active>
        <description>vauto contract - not billed through RMB</description>
        <label>vAuto NOT RMB</label>
    </recordTypes>
</CustomObject>